# ge2

./: CMakeLists.txt
include/: boidmode.h  engine.h  graphics.h  systems.h  term.h
include/programs/: boidmode.h  selftest.h  testmode.h
src/: 2d.cpp  behaviour.cpp  engine.cpp  event.cpp  geometry.cpp  graphics.cpp  init.cpp  shaders.cpp  skybox.cpp
src/legacy/: term.cpp
src/programs/: boidmode.cpp  selftest.cpp  testmode.cpp
